# smartcoin-solana

./: Anchor.toml  README.md  package.json
docs/: Requirements.md
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
programs/transfer-hook/src/instructions/: add_redemption.rs  cancel_redemption.rs  initialize_extra_account_meta.rs  mod.rs  pause_asset.rs  transfer_hook.rs  unpause_asset.rs
programs/transfer-hook/src/state/: accounts.rs  error_message.rs  mod.rs  utils.rs
